opam-version: "1.2"
maintainer: "sternenseemann <post@lukasepple.de>"
authors: ["sternenseemann <post@lukasepple.de>"]
homepage: "https://github.com/sternenseemann/logbook"
doc: "https://sternenseemann.github.io/logbook/doc"
license: "ISC"
dev-repo: "https://github.com/sternenseemann/logbook.git"
bug-reports: "https://github.com/sternenseemann/logbook/issues"
tags: []
depends: [
  "ocaml" {>= "4.07"}
  "dune" {>= "2.4"}
  "ptime" {>= "0.8.0"}
  "angstrom" {>= "0.12.0"}
  "astring" {>= "0.8.0"}
  "lwt"
  "jingoo"
  "cow"
  ]
depopts: []
build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]
